openshift/php-webapp/webapp-buildconfig.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sniffer-webapp
    name: sniffer-webapp
  spec: {}
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sniffer-webapp
    name: sniffer-webapp
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: sniffer-webapp:latest
    postCommit: {}
    resources: {}
    source:
      git:
        ref: master
        uri: git@spork.spawar.navy.mil:SDE/WhoIsHome.git
      sourceSecret:
        name: "sshsecret"
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: support/docker/apache-php/Dockerfile
      type: Docker
    triggers:
    - github:
        secret: 8Hnt16bDw3XhyNjCBBLo
      type: GitHub
    - generic:
        secret: oW2DKXiHA2pOw5-fZxOs
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sniffer-webapp
    name: sniffer-webapp
  spec:
    replicas: 1
    selector:
      app: sniffer-webapp
      deploymentconfig: sniffer-webapp
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/container.sniffer-webapp.image.entrypoint: '["apache2-foreground"]'
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: sniffer-webapp
          deploymentconfig: sniffer-webapp
      spec:
        containers:
        - env:
          - name: OPENSHIFT_MYSQL_DBNAME
            value: snifferdb
          - name: OPENSHIFT_MYSQL_DB_PASSWORD
            value: pungent
          - name: OPENSHIFT_MYSQL_DB_PORT
            value: "3306"
          - name: OPENSHIFT_MYSQL_DB_USERNAME
            value: admin
          image: sniffer-webapp:latest
          name: sniffer-webapp
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - sniffer-webapp
        from:
          kind: ImageStreamTag
          name: sniffer-webapp:latest
      type: ImageChange
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sniffer-webapp
    name: sniffer-webapp
  spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sniffer-webapp
      deploymentconfig: sniffer-webapp
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: sniffer-webapp
    name: sniffer-webapp
  spec:
    host: ""
    port:
      targetPort: 80-tcp
    to:
      name: sniffer-webapp
  status:
    ingress: null
kind: List
metadata: {}
