openshift/php-webapp/webapp-routeconfig.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: sniffer-webapp
  name: sniffer-webapp
spec:
  host: ""
  port:
    targetPort: 80-tcp
  to:
    name: sniffer-webapp
status:
  ingress: null
